Tue Apr 19 01:26:56 CEST 2005 (tk)
----------------------------------
  * libclamav/unrarlib.[ch]: removed

Mon Apr 18 11:55:48 BST 2005 (njh)
----------------------------------
  * clamav-milter:	Fixed a multi-threading problem relating to updating
				the database when in internal mode
			Use HAVE_CTIME_R_[23]

Thu Apr 14 19:39:49 BST 2005 (trog)
-----------------------------------
  * libclamav/scanners.c, libclamav/vba_extract.[ch]:
	Decode and scan OLE objects embedded in MS Office documents.

Thu Apr 14 14:35:37 BST 2005 (trog)
-----------------------------------
  * libclamav/scanners.c: Activate new RAR code.

  * libclamav/unrar.c, unrar.h, unrarvm.h: update code for activation

  * libclamav/Makefile.am, Makefile.in: compile in new RAR code
 
Thu Apr 14 14:11:31 CEST 2005 (tk)
----------------------------------
  * freshclam/manager.c: pass proper argument to OnErrorExecute (patch by
			 Alexandre Biancalana <ale*seudns.net>)

Thu Apr 14 14:04:46 CEST 2005 (tk)
----------------------------------
  * configure: check for ctime_r

Tue Apr 12 09:54:58 BST 2005 (trog)
-----------------------------------
  * libclamav/unrar: First commit of RAR3, RAR2 and RAR1 code.
		Not yet activated.

Thu Apr  7 20:00:23 CEST 2005 (tk)
----------------------------------
  V 0.84rc1

Thu Apr  7 19:41:09 CEST 2005 (tk)
----------------------------------
  * docs: update

Thu Apr  7 17:38:53 BST 2005 (njh)
----------------------------------
  * clamav-milter:	Added installation notes about Solaris 10
			Internal mode: print virus and error information on
				stdout. This goes to LogFile when not in debug
				mode.
			Included patch by Andy Feldt <feldt at nhn.ou.edu> for
				AIX 5.2. I do not have access to such a machine
				so any feedback would be helpful

Thu Apr  7 00:46:14 CEST 2005 (tk)
----------------------------------
  * libclamav/scanners.c: support ArchiveBlockMax in scan(g|b)zip()
			  (reported by Rudolph Pereira <rudolph*usyd.edu.au>)
